--- a/CarMarketplace.Web/Views/Catalog/Result.cshtml
+++ b/CarMarketplace.Web/Views/Catalog/Result.cshtml
@@ -12,8 +12,8 @@
     </div>
     @if (Model.Count == 0)
     {
-        <div class="d-flex justify-content-center align-items-center mt-5">
-            <h3>Sorry, no cars found.</h3>
+        <div class="text-center mt-4">
+            <img src="/img/Sad_car.png" >
         </div>
     }
     @foreach (var post in Model)
@@ -23,11 +23,11 @@
             <div class="container text-center border rounded shadow-lg p-3 mb-4 mt-4">
                 <div class="row align-items-start">
                     <div class="col-5">
-                        <img src="@imageSrc" class="card-img" alt="@post.Car.CarName">
+                        <img src="@imageSrc" class="card-img" alt="@post.Car.Make.Name @post.Car.Model.ModelName">
                     </div>
                     <div class="col">
                         <div class="col mt-3 text-start">
-                            <h2><strong>@post.Car.CarName @post.Car.Year</strong></h2>
+                            <h2><strong>@post.Car.Make.Name @post.Car.Model.ModelName @post.Car.Year</strong></h2>
                             <hr>
                             <div class="mt-4">
                                 <span class="fs-3"><span class="fst-italic">@post.Price</span> <strong>BGN</strong></span>
