--- a/CarMarketplace.Web/Views/Shared/_Layout.cshtml
+++ b/CarMarketplace.Web/Views/Shared/_Layout.cshtml
@@ -61,7 +61,7 @@
     </div>
 
     <footer class="border-top footer text-muted bg-primary">
-        <div class="container text-white">
+        <div class="container text-white fs-5">
             &copy; 2023 - CarMarketplace
         </div>
     </footer>
